force-app/main/default/objects/DCRM_Lead_Response_Conversation_Guide__mdt/DCRM_Lead_Response_Conversation_Guide__mdt.object-meta.xml
<CustomObject>
    <label>DCRM Lead Response Conversation Guide</label>
    <pluralLabel>DCRM_Lead_Response_Conversation_Guides</pluralLabel>
</CustomObject>