force-app/main/default/objects/DCRM_Lead_Response_Conversation_Guide__mdt/fields/Campaign_Lead_URL__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lead_URL__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>URL for the Active campaign information</description>
    <label>Campaign Lead URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>