force-app/main/default/objects/DCRM_Lead_Response_Conversation_Guide__mdt/fields/Conversation_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Guide_URL__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>URL for the Conversation guide specific to the Profile / Role</description>
    <label>Conversation Guide URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>