force-app/main/default/objects/DCRM_Lead_Response_Conversation_Guide__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Store what happens next based on Response Status and Create Opportunity flag</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>