force-app/main/default/objects/DCRM_Lead_Response_Conversation_Guide__mdt/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>List of the Roles for DivCRM (Comma Separated)</description>
    <label>User Role</label>
    <type>TextArea</type>
</CustomField>